fix: z-index alert

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,5 +17,9 @@
 .alert
 {
     border-radius: 0px !important;
+}
+
+.in-top
+{
     z-index: 9999 !important;
 }
